k3s/kustomize/environments/prod/downloader/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: downloader
  namespace: default
  labels:
    app: downloader
spec:
  template:
     spec:
      containers:
        - name: downloader
          image: registry.local.hejsan.xyz/downloader:main
